<resources>
    <string name="app_name">Tip Time</string>
    <string name="total_cost">Total Cost</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="excellent">Excellent (20%)</string>
    <string name="very_good_15">Very Good (15%)</string>
    <string name="good_10">Good (10%)</string>
    <string name="round_up_tip">Round Up Tip</string>
    <string name="c_a_l_c_u_l_a_t_e">C a l c u l a t e</string>
    <string name="amount_is_10">Amount is : 0</string>
</resources>