<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/total_cost_layout"
        android:layout_width="160dp"
        android:layout_marginStart="16dp"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_height="wrap_content"
        android:hint="@string/total_cost">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/total_cost_edit_text"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/question_tv"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/total_cost_layout"
        android:text="@string/how_was_the_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/percent_group"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/question_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/option_twenty_percent"
            android:text="@string/excellent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/option_fifteen_percent"
            android:text="@string/very_good_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/option_ten_percent"
            android:text="@string/good_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>




    </RadioGroup>

    <TextView
        android:id="@+id/round_up_tv"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/percent_group"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/round_up_tip"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/round_up_switch"
        app:layout_constraintTop_toTopOf="@id/round_up_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/round_up_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/calculate_btn"
        android:text="@string/c_a_l_c_u_l_a_t_e"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/round_up_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/display_tip_amount_tv"
        android:text="@string/amount_is_10"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/calculate_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



</androidx.constraintlayout.widget.ConstraintLayout>